# scr1

./: .gitignore  pyproject.toml  requirements.txt
src/tb/scr1_pipe_ialu/: ialu_test.py  runner.py
src/tb/scr1_pipe_ialu/ialu_model/: gold_test_vectors.py  ialu.py  test.py  test_vector.py
src/tb/scr1_pipe_ialu/ialu_test/: basic_test.py  random_test.py
